Non-breakable-spaces (inserted with Ctrl+' ' or menuitem)
Support for hyperlinks, for text background color (marker).
Improved handling of tabulators in ruler.
Auto-hide mouse cursor while typing.

"Change picture" feature.
SVG support (for cliparts).
Module for SVG previews in Konqueror.

Rewrite of tables where positioning is much more fool-proof and table-borders actually work.
More intelligent table-cell-scaling for cells with mixed text lengths

Text shadow feature.
Double-underline feature.
Ability to choose where to inline a frame.
Setting tabs via the rulers is more intuitive.
Add link (internet link/ address mail / file link)
Add dcop interface : now we can insert text, change text format, etc...
Frame z-order ("Raise frame", "Lower frame")
Preliminary support for background spell checking
Support for manual completion (use CTRL+E)
Support for note
Ability to associate key shortcuts to styles
"Section Title" variable

Triple click selects a paragraph.
New "PageUp/PageDown moves the caret" option, which defaults to false.
 The new behaviour for PageUp/PageDown is to move the scrollbars, not the caret.

Changes between KWord-1.2-beta1 and KWord-1.2-beta2
===================================================
- Footnotes
- "Apply autoformat" feature
- Extended Find/Replace to allow specifying text formatting
- Support for frame margins
- Support for frame "runaround gap"
- Creating a style directly from the selection
- Paragraph selection, clicking on the left of the text frame
- "Protect content" feature
- Double line border type for frames and paragraphs
- New dialogbox to resize a column in a table
- Add new font format (improve underline, strikeout )
- Add support to protect frameset size and position.
- Fix the loading, displaying and saving of old images (KOffice 1.0 type)
- The default width used by tab stops is now configurable
- Headers and footers can be both "different on first page" and "different
  on odd/even pages" at the same time.