@@ -83,6 +83,9 @@
 #include <kfiledialog.h>
 #include <kstdaction.h>
 #include <klocale.h>
+#include <kimageio.h>
+#include <koPictureFilePreview.h>
+
 #undef Bool
 #include <kspell.h>
 #include <kspelldlg.h>
@@ -939,6 +942,13 @@ void KWView::setupActions()
                                         this, SLOT( changeFootNoteType() ),
                                             actionCollection(), "change_footendtype");
 
+    actionSavePicture= new KAction( i18n("Save Picture..."), 0,
+                                    this, SLOT( savePicture() ),
+                                    actionCollection(), "save_picture");
+
+    actionSaveClipart= new KAction( i18n("Save Clipart..."), 0,
+                                    this, SLOT( saveClipart() ),
+                                    actionCollection(), "save_clipart");
 
 }
 
@@ -4194,11 +4204,14 @@ void KWView::openPopupMenuEditFrame( const QPoint & _point )
             {
                 actionList.append(separator);
                 actionList.append(actionChangePicture);
+                actionList.append(actionSavePicture);
             }
             else if(frameSet->type()==FT_CLIPART)
             {
                 actionList.append(separator);
                 actionList.append(actionChangeClipart);
+                actionList.append(actionSaveClipart);
+
             }
             else if(frameSet->isHeaderOrFooter())
             {
@@ -4733,6 +4746,74 @@ void KWView::changeClipart()
         m_doc->frameChanged( frame );
         m_doc->addCommand(cmd);
     }
+}
+void KWView::savePicture()
+{
+    KWFrame * frame = m_doc->getFirstSelectedFrame();
+    KWPictureFrameSet *frameset = static_cast<KWPictureFrameSet *>(frame->frameSet());
+    QString oldFile=frameset->image().getKey().filename();
+
+    QStringList mimetypes;
+    mimetypes = KImageIO::mimeTypes( KImageIO::Reading );
+    KFileDialog fd( oldFile, QString::null, 0, 0, TRUE );
+    fd.setMimeFilter( mimetypes );
+    fd.setCaption(i18n("Save Image"));
+    KURL url;
+    if ( fd.exec() == QDialog::Accepted )
+    {
+        url = fd.selectedURL();
+        if( url.isEmpty() )
+        {
+            KMessageBox::sorry( this,
+                                i18n("File name is empty"),
+                                i18n("Save Picture"));
+            return;
+        }
+        QFile file( url.path() );
+        if ( file.open( IO_ReadWrite ) ) {
+            frameset->image().save( &file );
+            file.close();
+        } else {
+            KMessageBox::error(this,
+                               i18n("Error during saving"),
+                               i18n("Save Picture"));
+        }
+    }
+}
+
+void KWView::saveClipart()
+{
+    KWFrame * frame = m_doc->getFirstSelectedFrame();
+
+    KWClipartFrameSet *frameset = static_cast<KWClipartFrameSet *>(frame->frameSet());
+    QString oldFile=frameset->key().filename();
+    QStringList mimetypes;
+    mimetypes = KoPictureFilePreview::clipartMimeTypes();
+    KFileDialog fd( oldFile, QString::null, 0, 0, TRUE );
+    fd.setMimeFilter( mimetypes );
+    fd.setCaption(i18n("Save Clipart"));
+    KURL url;
+    if ( fd.exec() == QDialog::Accepted )
+    {
+        url = fd.selectedURL();
+        if( url.isEmpty() )
+        {
+            KMessageBox::sorry( this,
+                                i18n("File name is empty"),
+                                i18n("Save Clipart"));
+            return;
+        }
+        QFile file( url.path() );
+        if ( file.open( IO_ReadWrite ) ) {
+            frameset->clipart().save( &file );
+            file.close();
+        } else {
+            KMessageBox::error(this,
+                               i18n("Error during saving"),
+                               i18n("Save Clipart"));
+        }
+    }
+
 }
 
 void KWView::configureHeaderFooter()
